# erisml-lib

./: DEME Advanced Architectural Roadmap.md  DEME_EM_AllItems_FullQuestions.xlsx  DEME_EM_AllItems_StoriesAndQuestions.xlsx  DEME_EM_AllItems_Template.xlsx  DEME_EM_Item1_RespondentTemplate.xlsx  DEME_Item1_Template.xlsx  ErisML_Vision.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
scripts/: em_profile.json  em_profile_v01.json  em_profile_v02.json  em_profile_v03.json  ethical_dialogue_cli.py  ethical_dialogue_cli_v02.py  ethical_dialogue_cli_v03.py  ethical_dialogue_cli_v04.py  ethical_dialogue_questions.yaml
src/erisml/: __init__.py
src/erisml/ethics/: __init__.py  facts.py  profile_v02.py  profile_v03.py  strategic.py
src/erisml/ethics/domain/: em_profile.py
src/erisml/ethics/governance/: aggregation.py  config.py
src/erisml/ethics/interop/: mcp_deme_server.py  profile_adapters.py
src/erisml/ethics/modules/: __init__.py  geneva_base_em.py  greek_tragedy_tragic_conflict_em.py  triage_em.py
src/erisml/examples/: demo_game_theory.py  hello_deme.py  triage_ethics_demo.py
