[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=src/erisml --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
# AGGRESSIVE EXCLUSION: This regex blocks the examples folder completely
exclude = "(?x)(^src/erisml/examples/.*$)"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'